# bmds-user-guide

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.github/workflows/: build-docs.yml  deploy-docs.yml
data/: rao-scott-transform-about-text.md
docs/: bayesian-dichotomous.md  bmds-desktop-pybmds.md  bmds-online.md  bmds.md  conf.py  continuous.md  dichotomous.md  index.md  model-recommendation.md  modeling-methods.md  multiple-tumor-analysis.md  nested-dichotomous.md  overview.md  references.md  result-output-mle.md  special-considerations.md  tables-reformatted.md  troubleshooting.md
docs/_static/css/: style.css
docs/_static/img/: image107.emf  rao-scott-adjustment.docx
docs/_static/js/: site.js
docs/source/: conf.py
