[project]
name = "bmds-user-guide"
license = {text = "MIT License"}
authors = [
  {name = "BMDS Development Team"},
]
readme = "README.md"
description = "U.S. EPA Dose Response Modeling Software User Guide"
dynamic = ["version"]
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
requires-python = ">=3.12"
dependencies = [
  "Sphinx~=8.1.3",
  "myst-nb~=1.1.2",
  "myst-parser~=4.0.0",
  "furo==2024.8.6",
  "sphinx_design~=0.6.1",
  "sphinx-autobuild~=2024.10.3",
  "poethepoet~=0.32.1",
  "sphinx_tippy~=0.4.3",
]

[tool.poe.tasks.docs]
help = "Build documentation"
cwd = "docs"
cmd = "sphinx-build -W -b html . ../build/html"

[tool.poe.tasks.docs-serve]
help = "Run documentation server"
cwd = "docs"
cmd = "sphinx-autobuild -b html . ../build/html --port 5800"
